examples/boogie/tfe/negativetests/bitvectors2.bpl
/*
  This test typesafety of bitvectors.
*/


procedure Q()
{
	var x:bv0;
	x := 32bv0; //error
}
